// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loading state 1`] = `
<div
  style={
    Object {
      "flex": 1,
    }
  }
>
  <h4>
    loading...
  </h4>
  <span>
    Counter is at 
    1
     on web
  </span>
  <br />
  <button
    onClick={undefined}
  >
    Increment
  </button>
  <button
    onClick={undefined}
  >
    Decrement
  </button>
</div>
`;

exports[`shows a counter count on web 1`] = `
<div
  style={
    Object {
      "flex": 1,
    }
  }
>
  <span>
    Counter is at 
    1
     on web
  </span>
  <br />
  <button
    onClick={undefined}
  >
    Increment
  </button>
  <button
    onClick={undefined}
  >
    Decrement
  </button>
</div>
`;

exports[`shows data from the server 1`] = `
<div
  style={
    Object {
      "flex": 1,
    }
  }
>
  <h4>
    GraphQL returned 
    hello world
     with a response of 
    200
  </h4>
  <span>
    Counter is at 
    1
     on web
  </span>
  <br />
  <button
    onClick={undefined}
  >
    Increment
  </button>
  <button
    onClick={undefined}
  >
    Decrement
  </button>
</div>
`;
